first commit - added 2 pages

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,10 +11,14 @@
 		<title>Vivere</title>
 	</head>
 	<body>
-		<a href="/"> Home </a>
+        <a href="/"> Home </a>
         <a href="/about/">About</a>
         <a href="/blog"> Blog </a>
         
-		<h1>Vivere</h1>
+
+		<h1>About ____</h1>
+        <p> we are a group of deidcated high schoolers striving to make philosophy accesible for all</p>
+        <h2> Mission </h2>
+        <p>blaj blah blah </p>
 	</body>
 </html>
