--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,10 +11,10 @@
 		<title>Vivere</title>
 	</head>
 	<body>
-		<a href="/"> Home </a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-        <a href="/blog"> Blog </a>
+        <a href="/blog">Blog</a>
         
-		<h1>Vivere</h1>
+		<h1>Blog</h1>
 	</body>
 </html>
