--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,8 @@
 ---
 import "/home/hao-gu/lolidk-/src/styles/global.css";
+import Header from '../components/header.astro';
+import Footer from '../components/footer.astro';
+
 const pageTitle = "About";
 const identity = {
   firstName: "Sarah",
@@ -37,9 +40,7 @@ const goal = 3;
         </style>
 	</head>
 	<body>
-        <a href="/"> Home </a>
-        <a href="/about/">About</a>
-        <a href="/blog"> Blog </a>
+        <Header />
 
 		<h1> {pageTitle} </h1>
         <ul>
@@ -60,5 +61,6 @@ const goal = 3;
         <p> we are a group of deidcated high schoolers striving to make philosophy accesible for all</p>
         <h2> Mission </h2>
         <p>blaj blah blah </p>
+        <Footer />
 	</body>
 </html>
