--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import "/home/hao-gu/lolidk-/src/styles/global.css";
+import Header from '../components/header.astro';
+import Footer from '../components/footer.astro';
+
 const pageTitle = "Vivere";
 ---
 
@@ -11,10 +15,8 @@ const pageTitle = "Vivere";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/"> Home </a>
-        <a href="/about/">About</a>
-        <a href="/blog"> Blog </a>
-        
+		<Header />
 		<h1>{pageTitle}</h1>
+		<Footer />
 	</body>
 </html>
