new file:   src/components/hamburger.astro modified:   src/components/header.astro modified:   src/components/navigation.astro new file:   src/layouts/baseLayout.astro modified:   src/pages/about.astro modified:   src/pages/blog.astro modified:   src/pages/index.astro new file:   src/scripts/menu.js modified:   src/styles/global.css

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,10 +1,12 @@
 ---
 import Navigation from '../components/navigation.astro';
+import Hamburger from '../components/hamburger.astro';
 import "/home/hao-gu/lolidk-/src/styles/global.css";
 ---
 
 <header> 
     <nav>
+        <Hamburger />
         <Navigation/>
     </nav> 
 </header>
