--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ const goal = 3;
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
         <style define:vars={{skillColor, fontWeight, textCase}}>
@@ -43,6 +43,9 @@ const goal = 3;
         <Header />
 
 		<h1> {pageTitle} </h1>
+        <script>
+            import "../scripts/menu.js";
+        </script>
         <ul>
             <li> My name is {identity.firstName}</li>
             {identity.hobbies.length >= 1 &&
