--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -9,7 +9,7 @@ const pageTitle = "Blog";
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
@@ -17,6 +17,9 @@ const pageTitle = "Blog";
         <Header />
         
 		<h1>{pageTitle}</h1>
+		<script>
+			import "../scripts/menu.js";
+		  </script>
         <ul>
             <li><a href="/posts/post-1">post 1</a></li>
             <li><a href="/posts/post-2/">Post 2</a></li>
