--- a/src/layouts/baseLayout.astro
+++ b/src/layouts/baseLayout.astro
@@ -3,9 +3,8 @@ import "/home/hao-gu/lolidk-/src/styles/global.css";
 import Header from '../components/header.astro';
 import Footer from '../components/footer.astro';
 
-const pageTitle = "Vivere";
+const { pageTitle } = Astro.props;
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -17,9 +16,11 @@ const pageTitle = "Vivere";
 	<body>
 		<Header />
 		<h1>{pageTitle}</h1>
+		<slot />
 		<script>
 			import "../scripts/menu.js";
 		</script>
 		<Footer />
+		
 	</body>
 </html>
