--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
 import "/home/hao-gu/lolidk-/src/styles/global.css";
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 import Footer from '../components/footer.astro';
 import Header from '../components/header.astro';
 const pageTitle = "Blog";
@@ -21,9 +23,7 @@ const pageTitle = "Blog";
 			import "../scripts/menu.js";
 		  </script>
         <ul>
-            <li><a href="/posts/post-1">post 1</a></li>
-            <li><a href="/posts/post-2/">Post 2</a></li>
-            <li><a href="/posts/post-3/">Post 3</a></li>
+			{allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
         </ul>
 		<Footer />
 	</body>
